k8s-manifest-files/deployment.apps_explorer-web-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: explorer-web-app
  name: explorer-web-app
  namespace: olfyi-0001
spec:
  replicas: 3
  selector:
    matchLabels:
      app: explorer-web-app
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: explorer-web-app
    spec:
      containers:
      - image: ghcr.io/whichnode/libra-explorer/web-app:4870d610d3a94997396125361f2f33e94afbd08a
        imagePullPolicy: IfNotPresent
        name: explorer-web-app
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
      imagePullSecrets:
      - name: docker-config
      restartPolicy: Always
