k8s-manifest-files/deployment.apps_explorer-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: explorer-worker
  name: explorer-worker
  namespace: olfyi-0001
spec:
  replicas: 5
  selector:
    matchLabels:
      app: explorer-worker
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: explorer-worker
    spec:
      containers:
      - env:
        - name: NODE_ENV
          value: production
        - name: ROLES
          value: version-batch-processor,parquet-producer-processor,version-processor,wallet-subscription-processor,swap-processor,node-watcher,expired-transactions-processor
        - name: S3_REGION
          valueFrom:
            secretKeyRef:
              key: S3_REGION
              name: api-env
        - name: S3_ENDPOINT
          valueFrom:
            secretKeyRef:
              key: S3_ENDPOINT
              name: api-env
        - name: S3_ACCESS_KEY_ID
          valueFrom:
            secretKeyRef:
              key: S3_ACCESS_KEY_ID
              name: api-env
        - name: S3_SECRET_ACCESS_KEY
          valueFrom:
            secretKeyRef:
              key: S3_SECRET_ACCESS_KEY
              name: api-env
        - name: S3_BUCKET
          valueFrom:
            secretKeyRef:
              key: S3_BUCKET
              name: api-env
        - name: S3_STORAGE_CLASS
          valueFrom:
            secretKeyRef:
              key: S3_STORAGE_CLASS
              name: api-env
        - name: CLICKHOUSE_HOST
          valueFrom:
            secretKeyRef:
              key: CLICKHOUSE_HOST
              name: api-env
        - name: CLICKHOUSE_USERNAME
          valueFrom:
            secretKeyRef:
              key: CLICKHOUSE_USERNAME
              name: api-env
        - name: CLICKHOUSE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: CLICKHOUSE_PASSWORD
              name: api-env
        - name: CLICKHOUSE_PORT
          valueFrom:
            secretKeyRef:
              key: CLICKHOUSE_PORT
              name: api-env
        - name: CLICKHOUSE_DATABASE
          valueFrom:
            secretKeyRef:
              key: CLICKHOUSE_DATABASE
              name: api-env
        - name: REDIS_HOST
          valueFrom:
            secretKeyRef:
              key: REDIS_HOST
              name: api-env
        - name: REDIS_PORT
          valueFrom:
            secretKeyRef:
              key: REDIS_PORT
              name: api-env
        - name: APN_PRIVATE_KEY
          valueFrom:
            secretKeyRef:
              key: APN_PRIVATE_KEY
              name: api-env
        - name: APN_KEY_ID
          valueFrom:
            secretKeyRef:
              key: APN_KEY_ID
              name: api-env
        - name: APN_TEAM_ID
          valueFrom:
            secretKeyRef:
              key: APN_TEAM_ID
              name: api-env
        - name: FIREBASE_SERVICE_ACCOUNT
          valueFrom:
            secretKeyRef:
              key: FIREBASE_SERVICE_ACCOUNT
              name: api-env
        - name: DATABASE_URL
          valueFrom:
            secretKeyRef:
              key: DATABASE_URL
              name: api-env
        - name: NATS_SERVERS
          valueFrom:
            secretKeyRef:
              key: NATS_SERVERS
              name: api-env
        image: ghcr.io/whichnode/libra-explorer/api:7606c1809ee4f1704f91bcdc9cb91b2c74b754ad
        imagePullPolicy: IfNotPresent
        name: explorer-worker
        volumeMounts:
        - mountPath: /usr/share/GeoIP
          name: geoip
      imagePullSecrets:
      - name: docker-config
      restartPolicy: Always
      volumes:
      - name: geoip
