k8s-manifest-files/pod_clickhouse.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: clickhouse
  name: clickhouse
  namespace: olfyi-0001
spec:
  containers:
  - image: clickhouse/clickhouse-server:24.1.6.52-alpine
    name: clickhouse
    ports:
    - containerPort: 8123
      name: http
    - containerPort: 9000
      name: clickhouse
    - containerPort: 9005
      name: postgres
    volumeMounts:
    - mountPath: /var/lib/clickhouse
      name: pvc
    - mountPath: /etc/clickhouse-server
      name: config
  volumes:
  - name: pvc
    persistentVolumeClaim:
      claimName: clickhouse-data
  - name: config
    secret:
      items:
      - key: config
        path: config.xml
      - key: users
        path: users.xml
      secretName: clickhouse-config
