k8s-manifest-files/pod_postgres.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: postgres
  name: postgres
  namespace: olfyi-0001
spec:
  containers:
  - args:
    - -c
    - max_connections=1000
    image: postgres:16.2-alpine
    name: postgres
    ports:
    - containerPort: 5432
    volumeMounts:
    - mountPath: /var/lib/postgresql/data
      name: pvc
  volumes:
  - name: pvc
    persistentVolumeClaim:
      claimName: postgres-data
