k8s-manifest-files/pod_redis.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: redis
  name: redis
  namespace: olfyi-0001
spec:
  containers:
  - image: redis
    name: redis
    ports:
    - containerPort: 6379
