k8s-manifest-files/service_clickhouse.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse
  namespace: olfyi-0001
spec:
  ports:
  - name: clickhouse
    port: 9000
    targetPort: clickhouse
  - name: http
    port: 8123
    targetPort: http
  selector:
    app: clickhouse
