k8s-manifest-files/service_explorer-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: explorer-api
  namespace: olfyi-0001
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: explorer-api
