k8s-manifest-files/service_postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: olfyi-0001
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
