k8s-manifest-files/service_redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: olfyi-0001
spec:
  ports:
  - port: 6379
  selector:
    app: redis
