k8s-manifest-files/service_rpc-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: rpc-load-balancer
  namespace: olfyi-0001
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: rpc-load-balancer
