k8s-manifest-files/ingress.networking.k8s.io_clickhouse.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: olfyi-0001-redirect@kubernetescrd
  name: clickhouse
  namespace: olfyi-0001
spec:
  rules:
  - host: db.scan.openlibra.world
    http:
      paths:
      - backend:
          service:
            name: clickhouse
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - db.scan.openlibra.world
    secretName: clickhouse-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: olfyi-0001-redirect@kubernetescrd
  name: clickhouse2
  namespace: olfyi-0001
spec:
  rules:
  - host: db.scan.openlibra.io
    http:
      paths:
      - backend:
          service:
            name: clickhouse
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - db.scan.openlibra.io
    secretName: clickhouse-tls2
