k8s-manifest-files/ingress.networking.k8s.io_explorer-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: olfyi-0001-redirect@kubernetescrd
  name: explorer-api
  namespace: olfyi-0001
spec:
  rules:
  - host: api.scan.openlibra.world
    http:
      paths:
      - backend:
          service:
            name: explorer-api
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.scan.openlibra.world
    secretName: explorer-api-tls
