k8s-manifest-files/ingress.networking.k8s.io_explorer-webapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: olfyi-0001-redirect@kubernetescrd
  name: explorer-webapp
  namespace: olfyi-0001
spec:
  rules:
  - host: scan.openlibra.world
    http:
      paths:
      - backend:
          service:
            name: explorer-web-app
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - scan.openlibra.world
    secretName: explorer-web-app-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: olfyi-0001-redirect@kubernetescrd
  name: explorer-webapp2
  namespace: olfyi-0001
spec:
  rules:
  - host: scan.openlibra.io
    http:
      paths:
      - backend:
          service:
            name: explorer-web-app
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - scan.openlibra.io
    secretName: explorer-web-app-tls2
