k8s-manifest-files/ingress.networking.k8s.io_rpc-load-balancer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: olfyi-0001-redirect@kubernetescrd
  name: rpc-load-balancer
  namespace: olfyi-0001
spec:
  rules:
  - host: rpc.scan.openlibra.world
    http:
      paths:
      - backend:
          service:
            name: rpc-load-balancer
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - rpc.scan.openlibra.world
    secretName: rpc-load-balancer-tls
